# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz-runtime-tokio — sce_link_runtime_tokio (Rust + tokio + mio epoll
# baseline) per docs/runtime-crate-tokio.md.
#
# Phase Z entry (R51). Initial surface: `LinkDriver` trait + tokio
# TCP impl + 2-task `tests/echo_demo.rs` proving wire interop end-
# to-end. This is the FIRST round in the project where two
# concurrent processes (here: tokio tasks on a single process via
# loopback) exchange real wire bytes encoded by wz-codecs and decoded
# back on the other side.
#
# Scope reduction vs the full docs/runtime-crate-tokio.md spec:
#   - 1 process, 2 tasks (publisher + subscriber on loopback TCP)
#   - LinkDriver trait shape matches §2.1 but only the 4 core methods;
#     trust-class gating (§2.4) + io_uring opt-in (§4.1) + pool-slot
#     Rx borrows (§2.3) all deferred to later rounds.
#   - Codec wiring is fixed to msg_put for the demo; full SCXML-driven
#     binding lands when session_fsm wiring closes (R54+).
#
# The R52 echo demo is the OBSERVABLE COMMUNICATION MILESTONE the
# project has been working toward since R28 ("when will we see
# communication?"). It does not yet exercise session FSM handshake
# or framing; the publisher sends a raw msg_put body, the subscriber
# decodes the raw msg_put body. This is the smallest end-to-end
# proof that wz-codecs Layer 3-validated bytes survive a real
# network round-trip.

[package]
name = "wz-runtime-tokio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "Tokio + mio epoll runtime for watching-zenoh AP linux target (Phase D.1)."

[lib]
name = "wz_runtime_tokio"
path = "src/lib.rs"

# R302b — first source-level Cargo features. `default = [...]` keeps
# existing in-workspace consumers (wz-ap-demo, integration tests,
# session_fsm tests) building unchanged; opt-out via
# `cargo check --no-default-features` exercises the feature-off path.
# Downstream of the `wz` facade these features are forwarded via
# `wz-runtime-tokio?/liveliness-token` etc. so a wz consumer enabling
# `preset-mcu-minimal` (no liveliness) gets the slim build.
#
# R307 — query domain joins the source-gated set (6 new entries).
# `query-get` gates `Session::get` / `Session::get_aliased`;
# `query-queryable` gates `Session::declare_queryable` /
# `declare_queryable_aliased` + the entire `crate::query` module;
# `query-reply` gates the entire `crate::reply` module (the get-side
# ReplyRegistry). Per-option setters on `QueryOptions` gate behind
# `query-target` / `query-timeout` / `query-consolidation` — each
# implies `query-get` since they only refine the get call path.
# `query-get` implies `query-reply` because `Session::get` registers a
# pending entry against `crate::reply::ReplyRegistry`. The defaults
# below mirror R302b: every existing in-workspace consumer compiles
# unchanged because the default features turn every R307 gate ON.
#
# R309 — declare domain joins the source-gated set (7 new entries).
# Each `send_declare_*` / `send_undeclare_*` / `send_interest_*` method
# in `session_glue.rs` carries the matching gate; the
# Application-layer `Session::declare_*` call sites remain on their
# existing semantic gate (`liveliness-token`, `query-queryable`,
# etc.) and pull the wire-emit transitively via the implication chain
# below. `liveliness-token` now implies `declare-token` +
# `declare-undeclare` so the existing R277 `LivelinessToken::Drop`
# emit continues to compile; `liveliness-subscriber` implies
# `declare-interest` + `declare-final` (R280 send_interest_*).
[features]
# R311a1 — codec-init-body / codec-open-body forwards to the matching
# wz-codecs feature. Forward-only (no force-ON): the wz-codecs dep
# below switches to `default-features = false` so the codec emit/
# include is governed purely by these forwards, which makes a future
# facade-level `--no-default-features` (R311a4) actually able to elide
# the init_body / open_body codec pair. R311a2 cfg-gates the
# `use wz_codecs::init_body::InitBody` import sites in session_glue.rs;
# R311a3 cfg-gates the `InboundFrame::Init { body, .. }` enum variant
# and parse/match arms. Until R311a3 lands, `--no-default-features` at
# wz-runtime-tokio level breaks compile (intended cascade chain).
default = [
    "liveliness-token",
    "liveliness-subscriber",
    "query-get",
    "query-queryable",
    "query-reply",
    "query-target",
    "query-timeout",
    "query-consolidation",
    "declare-final",
    "declare-interest",
    "declare-keyexpr",
    "declare-queryable",
    "declare-subscriber",
    "declare-token",
    "declare-undeclare",
    "codec-init-body",
    "codec-open-body",
    "codec-keep-alive",
    "codec-close",
    "codec-scout",
    "codec-hello",
    "codec-join",
    "codec-response-final",
    "codec-fragment",
    "codec-frame",
    "codec-push",
    "codec-declare",
    "codec-request",
    "codec-response",
    "transport-link-tcp",
    "transport-link-udp",
    "transport-unicast",
    "transport-keepalive",
    "transport-batching",
    "pubsub-put",
    "pubsub-delete",
    "pubsub-allow-loop",
    "pubsub-attachment",
    "pubsub-timestamp",
    "pubsub-source-info",
    "pubsub-priority",
    "pubsub-congestion-control",
    "pubsub-express",
    "session-unicast-open",
    "session-unicast-accept",
    "keyexpr-canon",
    "query-attachment",
    "query-selector-parameters",
    "query-reply-err",
]
# R311dz — liveliness-* / declare-{subscriber,queryable} additionally
# forward to the wz-session-core same-named gate-only feature so the
# migrated `ApplicationLayerObserver` field for that domain is composed
# consistently with this crate's selection. The richer declare-* wire
# implications below are unchanged.
liveliness-token = ["declare-token", "declare-undeclare", "wz-session-core/liveliness-token"]
liveliness-subscriber = ["declare-interest", "declare-final", "wz-session-core/liveliness-subscriber"]
# R311i — every declare-* feature implies codec-declare so the wire
# emit path (`send_declare_*` body-cfg branch) is mechanically
# available whenever the high-level declare surface is on.
declare-final = ["codec-declare"]
declare-interest = ["codec-declare"]
declare-keyexpr = ["codec-declare"]
declare-queryable = ["codec-declare", "wz-session-core/declare-queryable"]
declare-subscriber = ["codec-declare", "wz-session-core/declare-subscriber"]
declare-token = ["codec-declare"]
declare-undeclare = ["codec-declare"]
# `query-get` implies BOTH `query-reply` (the get-side ReplyRegistry
# tracks pending entries) AND `query-queryable` (the loopback path
# inside `Session::query` fans into the in-process QueryableRegistry
# and converts emitted `QueryReply` to `InboundReply` via the
# `From` adapter that lives in `reply.rs`). A pure wire-only get
# without the loopback path is a future-round refinement; the R307
# baseline keeps the loopback path universally available so the AP
# MVP integration tests + ap-demo continue to exercise both branches.
# R311j — query-* features imply codec-request because the wire-emit
# path (send_request_query) builds on Request/Query types gated by
# codec-request.
query-get = ["query-reply", "query-queryable", "codec-request"]
# R311k — query-queryable (queryable-side reply emit) + query-reply
# (z_get-side reply consume) both imply codec-response so the wire
# Response surface compiles whenever the high-level query reply
# capability is on.
query-queryable = ["codec-request", "codec-response", "wz-session-core/query-queryable"]
query-reply = ["codec-request", "codec-response", "wz-session-core/query-reply"]
query-target = ["query-get"]
query-timeout = ["query-get"]
query-consolidation = ["query-get"]
codec-init-body = ["wz-codecs/codec-init-body"]
codec-open-body = ["wz-codecs/codec-open-body"]
# R311b — codec-keep-alive forwards the wz-codecs gate. Session lease
# refresh path (last_inbound_keepalive_at stamp inside handle_inbound)
# is gated together with the wire-level KeepAlive parse/handle/FSM
# arms in session_glue.rs. Feature-off means a long-lived session
# eventually trips the lease.expired path because no peer KeepAlive
# can be decoded into a stamp update; the existing established_at
# baseline remains so short sessions still complete normally.
codec-keep-alive = ["wz-codecs/codec-keep-alive"]
# R311c — codec-close forwards wz-codecs. Wire encode (encode_close +
# send_close_with_reason + bind_unit "send_close_frame_with_reason")
# + decode (parse_inbound T_MID_CLOSE) elide together; FSM-level
# CloseReason enum + set_close_reason_* bindings stay unconditional.
codec-close = ["wz-codecs/codec-close"]
# R311d batch — scouting + multicast codecs. This crate forwards the
# features to wz-codecs for SCXML emit/include elision. session_glue.rs
# does NOT use Scout/Hello/Join types, so no source-side cfg gates
# exist here; the forwards stay catalog-uniform with the rest of the
# codec features for a future scouting-active runtime to reuse.
codec-scout = ["wz-codecs/codec-scout"]
codec-hello = ["wz-codecs/codec-hello"]
codec-join = ["wz-codecs/codec-join"]
# R311e — codec-response-final forwards wz-codecs + gates the
# session_glue.rs send/build/encode_frame_with/NetworkMessage variant/
# parse arm cluster. Feature-off: queryable can't emit the terminator;
# requesting peer's z_get hangs until per-call timeout fires.
codec-response-final = ["wz-codecs/codec-response-final", "wz-session-core/codec-response-final"]
# R311f — codec-fragment forwards wz-codecs. session_glue.rs doesn't
# import Fragment types; gate stays at wz-codecs level only.
codec-fragment = ["wz-codecs/codec-fragment"]
# R311g — codec-frame gates the Frame envelope INBOUND decode path:
# wz-codecs `pub mod frame` + session_glue.rs `InboundFrame::Frame`
# variant + `parse_inbound` `T_MID_FRAME` arm + `parse_frame_payload` +
# the `inbound_to_fsm_event` / `poll_and_dispatch_one` Frame match
# arms. R311g leaves the outbound `encode_frame_with_<body>` helpers
# unguarded by codec-frame because they are logically owned by their
# body codecs — R311h..R311k will gate them under codec-push /
# codec-declare / codec-request / codec-response respectively AND add
# `codec-<body> = ["codec-frame"]` implications so codec-frame OFF
# becomes meaningful only when every body codec is also off
# (handshake-only deploy: Init / Open / Close + KeepAlive). In the
# R311g interim state codec-frame OFF removes inbound Frame decode
# while outbound emit still produces Frame envelopes; the inbound
# fall-through is `InboundFrame::Unknown { mid: 0x05 }` which the FSM
# treats as FramingError. Honest semantics: a codec-frame-OFF
# wz-runtime-tokio cannot terminate a peer's data exchange and is
# only sensible as a future handshake-only build.
codec-frame = ["wz-codecs/codec-frame", "wz-session-core/codec-frame"]
# R311h — codec-push forwards wz-codecs and pulls codec-frame as a
# hard imply (Frame envelope is the wire carrier for every Push). When
# the feature is off the wz-runtime-tokio Push import + N_MID_PUSH +
# 8 build_push_* + encode_frame_with_push + send_push_* + NetworkMessage::Push +
# parse_frame_payload N_MID_PUSH arm all elide; the pubsub.rs module
# also disappears (gated at lib.rs because dispatch_push references
# Push directly). Honest semantics: feature-off = no pub/sub data
# carrier on the wire. The codec-push = ["codec-frame", ...] imply
# closes the first body-codec handshake-only-deploy contract slot
# (codec-frame OFF now requires codec-push OFF; R311i/j/k will extend
# the same imply to declare/request/response).
codec-push = ["wz-codecs/codec-push", "codec-frame", "wz-session-core/codec-push"]
# R311i — codec-declare gates wz-runtime-tokio's Declare wire surface
# in session_glue.rs: Declare/DeclareVariant/Decl*/Undecl* imports,
# N_MID_DECLARE const, 8 build_declare_* + 4 build_undeclare_* +
# encode_frame_with_declare + NetworkMessage::Declare variant + the
# parse_frame_payload N_MID_DECLARE arm. codec-declare = ["codec-frame"]
# closes the second body-codec-implies-envelope edge (handshake-only
# deploy: codec-frame OFF requires every body codec OFF; codec-push +
# codec-declare are the first two edges). The consumer-side declare/
# subscriber/queryable/liveliness/liveliness_subscriber modules
# + pubsub.rs absorb_declare stay always-on at this round per the
# R311m architectural deferral.
codec-declare = ["wz-codecs/codec-declare", "codec-frame", "wz-session-core/codec-declare"]
# R311j — codec-request gates the wz-runtime-tokio Request wire surface
# in session_glue.rs: Request/RequestVariant/Query imports, N_MID_REQUEST
# const, build_request_query + build_request_query_with_meta +
# encode_frame_with_request + NetworkMessage::Request variant + parse arm.
# codec-request = ["codec-frame"] closes the third
# body-codec-implies-envelope edge. query-get / query-queryable imply
# codec-request so the wire path is mechanically available whenever
# the high-level query surface is on.
codec-request = ["wz-codecs/codec-request", "codec-frame", "wz-session-core/codec-request"]
# R311k — codec-response gates the wz-runtime-tokio Response wire
# surface in session_glue.rs: Response/ResponseVariant/Reply/Err
# imports, N_MID_RESPONSE const, 4 build_response_* builders,
# encode_frame_with_response, NetworkMessage::Response variant + parse
# arm. codec-response = ["codec-frame"] closes the FOURTH and final
# body-codec-implies-envelope edge: after R311k, codec-frame OFF
# requires every body codec OFF, materialising the handshake-only
# deploy contract (Init / Open / Close + KeepAlive only). query-reply
# and query-queryable imply codec-response (the reply emit path on
# the queryable side).
codec-response = ["wz-codecs/codec-response", "codec-frame", "wz-session-core/codec-response"]
# R311cb — transport domain wire-up. 5 atomic features that have real
# source behavior in this crate (Cargo.toml authoring intent: "16
# atomic, 5 active / 11 reserved"). Each gates a concrete cfg site:
#   transport-link-tcp     — TcpDriver struct + LinkDriver impl + the
#                            tokio::net::TcpStream import (lib.rs ~315).
#   transport-link-udp     — UdpDriver struct + LinkDriver impl + the
#                            tokio::net::UdpSocket import (lib.rs ~517).
#   transport-unicast      — FOUNDATIONAL, not an excludable atomic
#                            (R311fe, same class as keyexpr-canon). It
#                            gates `pub mod session_fsm_unicast` (lib.rs
#                            ~203) and the entire session_glue.rs depends
#                            on the SessionFsmUnicast{Event,Policy} types,
#                            so feature-off does not type-check — and
#                            there is no alternate FSM to fall back to
#                            (transport-multicast stays reserved with no
#                            consumer; introducing a stub FSM purely to
#                            make the OFF subset build would be a
#                            speculative YAGNI fork). Genuine exclusion is
#                            blocked until a second FSM genuinely lands;
#                            until then this is a default-on toggle that
#                            the arbitrary-subset CI lanes (C4c build +
#                            C1j behaviour, scripts/run-ci.sh) pin ON.
#                            The other
#                            transport atomics below ARE independently
#                            composable on top of it.
#   transport-keepalive    — start_keepalive_worker / stop_keepalive_worker
#                            action bindings + the worker spawn body in
#                            session_glue.rs. R311g1 silent no-op when
#                            disabled (the bind_unit registers a no-op
#                            so the SCXML script-action surface stays
#                            available; the spawn body short-circuits).
#                            Wire-level KeepAlive parse stays governed
#                            by codec-keep-alive — transport-keepalive
#                            disables only the active sender side.
#   transport-batching     — INIT handshake batch_size negotiation in
#                            PeerInitCaps::from_init_syn. Feature-off
#                            forces batch_size = 65535 (full MTU) and
#                            skips the min(peer, local) reduction at
#                            the OpenAck arm.
# 11 reserved (link-tls/quic/ws/unixsock/vsock/serial, multicast,
# fragmentation, compression, shm, lowlatency) stay declaration-only
# at the wz facade Cargo.toml level; this crate does not own them.
transport-link-tcp = []
transport-link-udp = []
transport-unicast = []
transport-keepalive = []
# R311eg — forward to the wz-session-core same-named gate so the migrated
# PeerInitCaps::from_init_syn decoder honors the peer-advertised batch_size
# consistently (off clamps to full MTU). The min(peer, local) reduction at
# the OpenAck arm stays gated in this crate.
transport-batching = ["wz-session-core/transport-batching"]
# R311cc — pubsub domain wire-up. 9 atomic features that have real
# source behavior in this crate (Cargo.toml authoring intent: "11
# atomic, 9 active / 2 reserved"). Each gates a concrete cfg site:
#   pubsub-put         — MsgPut import in query.rs + SampleKind::Put
#                        emission at the Push consumer in pubsub.rs.
#                        Feature-off elides the Put body branch.
#   pubsub-delete      — MsgDel import + Delete branch in query.rs;
#                        SampleKind::Delete fan-out path. Feature-off
#                        leaves only Put-shaped samples observable.
#   pubsub-allow-loop  — local_publish loopback registry call in
#                        session.rs (Session::publish-self path).
#                        Feature-off short-circuits the loopback so
#                        only remote inbound triggers subscribers.
#   pubsub-attachment  — `Sample::with_attachment` setter in sample.rs
#                        + the Push consumer attachment projection.
#                        Feature-off keeps the Option field but never
#                        populates it (signature stability).
#   pubsub-timestamp   — `Sample::with_timestamp` setter + Push
#                        consumer timestamp projection. Same shape
#                        as -attachment: field stays, populator gates.
#   pubsub-source-info — `extract_source_info` Push projection into
#                        `Sample::source_info`. Same shape as
#                        -attachment: field stays, populator gates.
#                        Feature-off also disables R231 self-echo dedup
#                        (no decoded source_info to match) — the
#                        dispatch cautious-fires instead.
#   pubsub-priority    — `extract_qos` Push projection into Sample.qos.
#   pubsub-congestion-control — same projection (shared QoS byte).
#   pubsub-express     — same projection (shared QoS byte). The three
#                        are bit views of one _z_qos_t._val, so the
#                        subscriber projection gates on `any` of them;
#                        all-off elides extract_qos, Sample.qos = None.
# 2 reserved (encoding, sample) stay declaration-only at the wz facade
# level.
# R311du — forward to wz-session-core: the pub/sub dispatch arms moved
# there with SubscriberRegistry, so the AP-side feature must enable the
# session-core gate (3-stage shape mirrors the codec-* forwarders).
# pubsub-allow-loop stays AP-only (no session-core dispatch arm gates on
# it — it governs the wz-runtime-tokio self-publish loopback path).
pubsub-put = ["wz-session-core/pubsub-put"]
pubsub-delete = ["wz-session-core/pubsub-delete"]
pubsub-allow-loop = []
pubsub-attachment = ["wz-session-core/pubsub-attachment"]
pubsub-timestamp = ["wz-session-core/pubsub-timestamp"]
pubsub-source-info = ["wz-session-core/pubsub-source-info"]
pubsub-priority = ["wz-session-core/pubsub-priority"]
pubsub-congestion-control = ["wz-session-core/pubsub-congestion-control"]
pubsub-express = ["wz-session-core/pubsub-express"]
# R311cd — session domain wire-up. 2 atomic features that have real
# source behavior (Cargo.toml authoring intent: "9 atomic, 2 active /
# 7 reserved"):
#   session-unicast-open   — open-side bind for send_init_syn /
#                            send_open_syn SCXML actions (Initiator
#                            wire emit). Combined with codec-init-body
#                            / codec-open-body so OFF on either axis
#                            collapses the binding.
#   session-unicast-accept — accept-side bind for
#                            send_init_ack_with_cookie / send_open_ack
#                            (Acceptor wire emit). Combined with the
#                            same codec gates.
# 7 reserved (extauth, extcompression, extqos, extshm, multicast,
# resumable, stateless-accept) stay declaration-only at wz facade.
session-unicast-open = []
session-unicast-accept = []
# R311cf/R311fd — keyexpr domain. The other 7 keyexpr-* features are
# cluster-wide behaviors with no single anchor cfg site (follow-up
# cascade per-site wire-up).
#   keyexpr-canon — FOUNDATIONAL, not an excludable atomic. R311cf
#     intended this to gate `pub mod keyexpr_canon` (structural
#     canonicalize mirror of zenoh-pico `_z_keyexpr_canonize`), but the
#     R311o type-ungating cascade made `OutboundKeyexprError` (hence
#     `LivelinessAliasError::InvalidKeyexpr`) unconditional, and the dep
#     on `wz-session-core/alloc` is unconditional, so the module + its
#     consumers are always present. The re-export gate (lib.rs) was thus
#     a phantom that broke every keyexpr-canon-OFF subset (carry #3);
#     R311fd made the re-export unconditional. This feature is retained
#     as a no-op compatibility marker so presets / domain-keyexpr /
#     facade forwards that list it keep resolving; toggling it changes
#     nothing. Genuine exclusion is blocked by signature-stability.
keyexpr-canon = []
# R311cj — query domain 3 additional wire-ups (6 active -> 9 active):
#   query-attachment            — Query inbound attachment ext extraction.
#                                 cfg-off: callback observes None.
#   query-selector-parameters   — Query.parameters slice projection in
#                                 dispatch. cfg-off: parameters_view = None.
#   query-reply-err             — Err-form reply emit via ReplyEmitter
#                                 (combined with query-queryable gate).
# query-source-info (10th feature) stays cluster-deferred: no source
# implementation of build_request_query_with_source_info yet (doc-only
# reference); wire-up cascade lands when the impl arrives.
query-attachment = ["wz-session-core/query-attachment"]
query-selector-parameters = ["wz-session-core/query-selector-parameters"]
query-reply-err = ["wz-session-core/query-reply-err"]
# R311en — scouting domain wire-up (active mode). First of the
# scouting 0/6 -> active transition (north-star missing-subsystem
# track). `scouting-active` gates:
#   - build.rs codegen of sources/session/scouting.scxml (the
#     pre-session Scout/Hello discovery FSM, docs/scouting-fsm.md §10).
#   - the `pub mod scouting_fsm` include + the host ScoutingActions
#     impl that binds the FSM actions to the UDP-multicast scouting
#     link (multicast driver lands in the R311en cascade body round).
# Off by default: scouting is opt-in per deploy.scouting.mode. The
# static mode (docs/scouting-fsm.md §2.4.3) never instantiates this
# FSM, so it is not gated by this feature. passive is Phase D+
# (OQ-W23). Forwarded from the wz facade `scouting-active`.
#
# Implies transport-link-udp: the scouting link is UDP multicast
# (docs/scouting-fsm.md §1.2 — 224.0.0.224:7446), so the UdpDriver +
# its multicast constructor (UdpDriver::bind_multicast_v4, gated on
# scouting-active inside the transport-link-udp UdpDriver impl) must be
# compiled in. Without the imply, `--no-default-features --features
# scouting-active` would gate the multicast constructor out and the
# scout link would have no transport.
#
# R311ep — also implies codec-scout + codec-hello: scout_emit encodes a
# Scout frame and record_hello_and_emit decodes a Hello frame, so the
# scouting glue cannot compose without both body codecs. The S_MID_SCOUT
# / S_MID_HELLO wire_const header bytes are gated on the same two codec
# features in wz-codecs.
scouting-active = ["transport-link-udp", "codec-scout", "codec-hello"]

[build-dependencies]
sce-build = { path = "../../vendor/sce/sce-build" }

[dependencies]
tokio = { version = "1", features = ["net", "io-util", "rt-multi-thread", "macros", "sync", "time"] }
# R311a1 — `default-features = false` + explicit `alloc` so the codec
# emit/include of every codec-* is governed strictly by the matching
# `codec-*` forward above. Without disabling defaults the codec
# features would always activate via wz-codecs's own default list,
# making the forwards a no-op and preventing facade-level
# `--no-default-features` from eliding any codec.
#
# R311dk — codec-push / codec-declare / codec-request / codec-response
# are NOT hard-pinned here anymore; they reach wz-codecs through the
# matching `wz-codecs/codec-*` line in the feature-forward block above
# (R311h..R311k). This is the textbook 3-tier composability chain:
# wz facade -> wz-runtime-tokio codec-* -> wz-codecs/codec-*.
wz-codecs = { path = "../wz-codecs", default-features = false, features = ["alloc"] }
# R252 — Runtime / TimeSource / Allocator trait surface. The AP profile
# (this crate) bridges tokio + std into the trait contract authored in
# R251; the MCU profile (future wz-runtime-lwip) will provide the same
# trait implementations against lwIP + an embedded async executor. The
# `alloc` feature is on because tokio + this crate are AP-only by design
# and need the R266 `RuntimeError::JoinFailed { payload: Box<...> }`
# panic-capture variant; the trait crate itself stays unconditionally
# no_std (std is available at the binary linker level for AP).
wz-runtime-core = { path = "../wz-runtime-core", features = ["alloc"] }
wz-session-core = { path = "../wz-session-core", features = ["alloc"] }
sce-forge-runtime = { path = "../../vendor/sce/sce-forge-runtime/rust" }
sce-rust-runtime = { path = "../../vendor/sce/sce-rust-runtime" }
sce-rust-lua = { path = "../../vendor/sce/sce-rust-lua" }
log = "0.4"
# R311ei — the HMAC-SHA256 cookie primitive (hmac + sha2) moved to
# wz-session-core::signing_key (runtime-agnostic, MCU-cross-compiled).
# This crate keeps only the OS-entropy constructor (a free fn), so it
# retains `zeroize` (the Zeroizing key wrapper) + `getrandom`.
# Zeroize cookie signing keys on drop. RustCrypto ecosystem standard;
# the `Zeroizing<Vec<u8>>` wrapper clears the heap allocation when
# the SigningKey owning it is dropped, preventing cryptographic
# secret residue in core dumps / heap leaks / panic backtraces
# (3rd review #4 from R63's strict audit retrospect).
zeroize = { version = "1", features = ["zeroize_derive"] }
# R69 — AP-side entropy source for signing_key_from_os_entropy. RustCrypto
# ecosystem chooses `getrandom` for OS-syscall-backed (Linux: getrandom(2)
# fallback to /dev/urandom; macOS: getentropy) cryptographic random bytes.
# MCU sibling (wz-runtime-lwip Phase W) does NOT pull this dep — it
# routes through `sce_intrinsics_runtime::rng` per §5.I architectural-
# tier registry (intrinsics §2.5). Keeping the dep AP-only preserves
# the no_std contract on the MCU build.
getrandom = "0.2"
# R311di-pre-a — no_std-compatible HashMap. `hashbrown` is the upstream
# implementation of std::collections::HashMap (std re-exports it via
# alloc + hashbrown). Pulling the crate directly here makes the
# session_glue.rs / session.rs / declare/* HashMap import surface
# move-ready: when these modules extract to wz-session-core (no_std +
# alloc) at R311di, the `use hashbrown::HashMap` line works unchanged.
# Default features include `default-hasher` (foldhash) + `inline-more`
# + `allocator-api2` — match the std::collections::HashMap behaviour
# the existing call sites already assume.
hashbrown = "0.15"
# R311di-pre-a — no_std-compatible atomic ints. `portable-atomic`
# provides AtomicU64 with the same API as std::sync::atomic::AtomicU64;
# on AP (this crate, has native u64 atomics) it forwards directly to
# core::sync::atomic, on MCU (wz-runtime-lwip pulls the same crate with
# the critical-section feature per R311bb) it falls back via interrupt-
# disable. Migration target: every wz-runtime-tokio AtomicU64 call site
# routes through this crate so the eventual extraction to wz-session-core
# (no_std) sees a single dep surface across both runtime profiles.
portable-atomic = "1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
# R71 — test fixtures + rebind shims moved to a separate sibling crate
# so the production compile units of this crate carry zero test-only
# code paths. Previously these helpers lived behind a `_test_support`
# Cargo feature; the sibling-crate model is a stronger encapsulation
# contract because a downstream consumer cannot enable the feature
# transitively to import the fixtures.
wz-runtime-tokio-test-support = { path = "../wz-runtime-tokio-test-support" }
# R311ds — the wz-session-core-test-support dev-dep moved to
# wz-session-core: the declare/* shells no longer host the behavioural
# tests (they migrated to wz-session-core next to the registry code),
# so this crate no longer consumes the four-registry fixture builders.

[lints]
workspace = true
