# SPDX-License-Identifier: LGPL-3.0-or-later OR LicenseRef-watching-zenoh-Commercial
# SPDX-FileCopyrightText: Copyright (c) 2026 newmassrael
#
# wz-session-core — R311di proper entry (skeleton at R311di-1).
#
# Runtime-agnostic Session + SessionLinkActions + helper surface; the
# no_std + alloc home of the SCXML-driven session FSM tier currently
# spread across `wz-runtime-tokio::{session, session_glue, observer,
# declare, pubsub, query, reply, sample, locality, keyexpr_canon}`.
# This crate hosts the generic `impl<R: Runtime, T: TimeSource>` bodies
# so MCU profiles (`R = LwipRuntime<C>`, `T = LwipTime<C>`) compose
# the same session machinery without dragging in std / tokio / Lua.
#
# Phase W placement: §5.P runtime-services-tier consumer (wz-runtime-core
# trait surface) + §5.C link-tier consumer (BoxedLinkDriver). The Lua
# binding family (`install_session_actions` + `register_*` + `bind_unit`)
# stays in wz-runtime-tokio because the SCXML script engine is std/tokio-
# dependent and AP-only by spec. The `SessionLinkActions::new` concrete
# TokioRuntime-bound constructor also stays in wz-runtime-tokio for the
# same reason (AP-only entry point).
#
# R311di-1 lands the empty skeleton; subsequent sub-rounds (R311di-2 +
# beyond) move files in incrementally with import path rewrites and
# regression coverage at each step. The crate compiles unconditionally
# `no_std` with an opt-in `alloc` feature so MCU bare-metal profiles
# without a heap can still link the trait surface and the no-alloc
# subset of the session machinery.

[package]
name = "wz-session-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description = "R311di proper — runtime-agnostic Session / SessionLinkActions / helper surface (Phase W §5.P + §5.C consumer)."

[features]
default = ["alloc"]
# `alloc` brings `Box`/`Vec`/`String` into scope so the session machinery
# (HashMap-backed mapping tables, Vec-backed ext chains, owned codec
# byte buffers) can compose. R311di-2+ will gate the alloc-bound surface
# on this feature; the trait-only sub-surface stays available with
# default-off `alloc` for MCU profiles that prefer stack/static-only.
alloc = []

# R311di-11 — body-codec feature forwarders for the NetworkMessage
# dispatch cluster. Each forwards to wz-codecs/codec-* so the 3-stage
# chain (wz-runtime-tokio codec-X -> wz-session-core codec-X ->
# wz-codecs codec-X) keeps a single ground-truth gate per body codec.
# Implication shape mirrors wz-runtime-tokio: codec-push / codec-request
# / codec-response / codec-declare imply codec-frame (Frame envelope is
# the wire carrier for every Push/Request/Response/Declare record per
# parse_frame_payload's match arms). codec-response-final does NOT
# imply codec-frame: the parse_frame_payload N_MID_RESPONSE_FINAL arm
# is cfg(all(codec-frame, codec-response-final)), matching the R311e/g
# decision to keep the body codec independently selectable.
codec-frame = ["wz-codecs/codec-frame"]
codec-push = ["codec-frame", "wz-codecs/codec-push"]
codec-request = ["codec-frame", "wz-codecs/codec-request"]
codec-response = ["codec-frame", "wz-codecs/codec-response"]
codec-response-final = ["wz-codecs/codec-response-final"]
codec-declare = ["codec-frame", "wz-codecs/codec-declare"]

[dependencies]
wz-runtime-core = { path = "../wz-runtime-core" }
# R311di-4 — wz-codecs needed by sample.rs for `wz_codecs::ext_entry`
# projection helpers (extract_qos / extract_attachment / extract_source_info).
# default-features = false + features = ["alloc"] mirrors wz-runtime-tokio's
# baseline so MCU profiles stay heap-aware but std-free.
wz-codecs = { path = "../wz-codecs", default-features = false, features = ["alloc"] }
# R311di-6 — sce-forge-runtime supplies `CodecError` needed by
# InboundParseError variants. default-features = false stays MCU-aware;
# `alloc` is implied via wz-codecs's transitive enable but the dep is
# declared direct so the import path `sce_forge_runtime::codec::CodecError`
# resolves without going through wz-codecs's namespace.
sce-forge-runtime = { path = "../../vendor/sce/sce-forge-runtime/rust", default-features = false }
# R311di-13 — hashbrown for the resolve_wireexpr peer-keyexpr-table
# lookup (HashMap<u64, String>). default-features = false stays
# no_std-clean; the wz-runtime-tokio side already depends on hashbrown
# for the same reason (R311di-pre-a). R311dm — the `default-hasher`
# feature is enabled explicitly so a wz-session-core-only consumer
# (e.g. `cargo test -p wz-session-core --lib` MCU-style regression)
# resolves `HashMap<u64, String>::get` without leaning on the
# wz-runtime-tokio side enabling it transitively.
hashbrown = { version = "0.15", default-features = false, features = ["default-hasher"] }

[lints]
workspace = true
